--- a/Final_BaseProject/MDK-ARM/GXX_Project/GXX_Project.build_log.htm
+++ b/Final_BaseProject/MDK-ARM/GXX_Project/GXX_Project.build_log.htm
@@ -27,60 +27,14 @@ Project File Date:  11/11/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'GXX_Project'
-compiling freertos.c...
-assembling startup_stm32l475xx.s...
-compiling stm32l4xx_hal_msp.c...
 compiling main.c...
-../Src/main.c(434): error:  #165: too few arguments in function call
-  	HAL_DAC_SetValue();
-../Src/main.c: 0 warnings, 1 error
-compiling stm32l4xx_it.c...
-compiling stm32l4xx_hal_timebase_TIM.c...
-compiling stm32l4xx_hal_dac_ex.c...
-compiling stm32l4xx_hal_dac.c...
-compiling stm32l4xx_hal_tim_ex.c...
-compiling stm32l4xx_hal_dfsdm.c...
-compiling stm32l4xx_hal_tim.c...
-compiling stm32l4xx_hal_uart_ex.c...
-compiling stm32l4xx_hal.c...
-compiling stm32l4xx_hal_uart.c...
-compiling stm32l4xx_hal_i2c_ex.c...
-compiling stm32l4xx_hal_rcc.c...
-compiling stm32l4xx_hal_i2c.c...
-compiling stm32l4xx_hal_flash.c...
-compiling stm32l4xx_hal_rcc_ex.c...
-compiling stm32l4xx_hal_flash_ex.c...
-compiling stm32l4xx_hal_gpio.c...
-compiling stm32l4xx_hal_flash_ramfunc.c...
-compiling stm32l4xx_hal_dma.c...
-compiling stm32l4xx_hal_dma_ex.c...
-compiling stm32l4xx_hal_pwr.c...
-compiling stm32l4xx_hal_pwr_ex.c...
-compiling stm32l4xx_hal_cortex.c...
-compiling system_stm32l4xx.c...
-compiling stm32l4xx_hal_qspi.c...
-compiling stm32l475e_iot01_accelero.c...
-compiling stm32l475e_iot01_gyro.c...
-compiling stm32l475e_iot01.c...
-compiling stm32l475e_iot01_hsensor.c...
-compiling stm32l475e_iot01_magneto.c...
-compiling stm32l475e_iot01_psensor.c...
-compiling hts221.c...
-compiling lis3mdl.c...
-compiling lps22hb.c...
-compiling lsm6dsl.c...
-compiling heap_4.c...
-compiling port.c...
-compiling croutine.c...
-compiling event_groups.c...
-compiling list.c...
-compiling queue.c...
-compiling tasks.c...
-compiling timers.c...
-compiling cmsis_os.c...
-compiling stm32l475e_iot01_tsensor.c...
-compiling stm32l475e_iot01_qspi.c...
-"GXX_Project\GXX_Project.axf" - 1 Error(s), 0 Warning(s).
+linking...
+GXX_Project\GXX_Project.axf: Warning: L6989W: Could not apply patch sdcomp-29491-629360 to instruction VPOP     {d8-d13} at offset 0x54, instruction is within an IT block and is not the last instruction for acos.o(i.__hardfp_acos).
+GXX_Project\GXX_Project.axf: Warning: L6989W: Could not apply patch sdcomp-29491-629360 to instruction VPOP     {d8-d14} at offset 0x54, instruction is within an IT block and is not the last instruction for acos_x.o(i.____hardfp_acos$lsc).
+Program Size: Code=14652 RO-data=2668 RW-data=140 ZI-data=4780  
+Finished: 0 information, 2 warning and 0 error messages.
+FromELF: creating hex file...
+"GXX_Project\GXX_Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -109,8 +63,7 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:DSP:1.5.2
       Include file:  CMSIS\DSP\Include\arm_math.h
       Library file:  CMSIS\Lib\ARM\arm_cortexM4lf_math.lib
-Target not created.
-Build Time Elapsed:  00:02:00
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
