--- a/Final_BaseProject/MDK-ARM/GXX_Project/GXX_Project.build_log.htm
+++ b/Final_BaseProject/MDK-ARM/GXX_Project/GXX_Project.build_log.htm
@@ -27,16 +27,16 @@ Project File Date:  11/15/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'GXX_Project'
-compiling stm32l4xx_it.c...
 compiling main.c...
-../Src/main.c(772): warning:  #1-D: last line of file ends without a newline
+../Src/main.c(197): warning:  #257-D: const variable "mixingMatrix"  requires an initializer
+  	const arm_matrix_instance_f32 mixingMatrix;
+../Src/main.c(198): warning:  #257-D: const variable "signals"  requires an initializer
+  	const arm_matrix_instance_f32 signals;
+../Src/main.c(796): warning:  #1-D: last line of file ends without a newline
   /************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****/
-../Src/main.c: 1 warning, 0 errors
+../Src/main.c: 3 warnings, 0 errors
 linking...
-GXX_Project\GXX_Project.axf: Warning: L6989W: Could not apply patch sdcomp-29491-629360 to instruction VPOP     {d8-d13} at offset 0x54, instruction is within an IT block and is not the last instruction for acos.o(i.__hardfp_acos).
-GXX_Project\GXX_Project.axf: Warning: L6989W: Could not apply patch sdcomp-29491-629360 to instruction VPOP     {d8-d14} at offset 0x54, instruction is within an IT block and is not the last instruction for acos_x.o(i.____hardfp_acos$lsc).
-Program Size: Code=13324 RO-data=496 RW-data=212 ZI-data=1916  
-Finished: 0 information, 2 warning and 0 error messages.
+Program Size: Code=15736 RO-data=560 RW-data=144 ZI-data=1912  
 FromELF: creating hex file...
 "GXX_Project\GXX_Project.axf" - 0 Error(s), 3 Warning(s).
 
@@ -67,7 +67,7 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:DSP:1.5.2
       Include file:  CMSIS\DSP\Include\arm_math.h
       Library file:  CMSIS\Lib\ARM\arm_cortexM4lf_math.lib
-Build Time Elapsed:  00:00:11
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
